# jsonstruct

./: .gitignore  README.md  pyproject.toml  setup.py
jsonstruct/: pickler.py
tests/: backends_tests.py  benchmark.py  document_test.py  runtests.py  test_datetime.py  test_handlers.py  thirdparty_tests.py  typedjson_test.py  util_tests.py
typedjson/: __init__.py  _handlers.py  _samples.py  backend.py  handlers.py  pickler.py  tags.py  unpickler.py  util.py
