[tool.poetry]
name = "jsonstruct"
version = "0.2.1"
description = ""
authors = ["Xingchen Yu <initialxy@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
demjson = "^2.2"
simplejson = "^3.16"
ujson = "^1.35"
six = "^1.13"
jsonlib = "^1.6"
feedparser = "^5.2"
yajl = "^0.3.5"

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
